manifests/workloads/minecraft-vanilla-local/sftp.yaml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-vanilla-local-sftp
  namespace: minecraft-vanilla-local
  annotations:
    tailscale.com/hostname: minecraft-vanilla-local-sftp
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - name: sftp
      port: 22
      targetPort: sftp
      protocol: TCP
  selector:
    app: minecraft-vanilla-local
